--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --navbar-height: 4rem; /* Adjust this value based on your navbar height */
+  }
